@@ -1,3 +1,8 @@
+2010-06-04  Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>
+
+	* aprx.h, dprsgw.c:
+	    Couple steps onwards with DPRS Rx-IGate.
+
 2010-06-01  Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>
 
 	* aprx.c:
